// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base-login Renders \`base-login\` with custom state 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__title primary white--text"
  >
    <div
      class="layout justify-space-between align-center"
    >
      <h3>
        Login
      </h3>
      <img
        alt=""
        class="secondaryLogo"
        src="@/assets/canopsis.png"
      />
    </div>
  </div>
  <div
    class="v-card__text"
  >
    <form
      class="v-form pa-2"
      novalidate="novalidate"
    >
      <ldap-login-information-stub />
      <login-form-stub
        form="[object Object]"
      />
      <div
        class="flex"
      >
        <div
          class="layout mb-1 justify-space-between align-center"
        >
          <button
            class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
            type="submit"
          >
            <span
              class="v-btn__content"
            >
            Connect
            </span>
          </button>
          <div
            class="flex xs9"
          >
            <c-alert-stub
              class="py-1 my-0 font-weight-bold"
              type="error"
            >
            </c-alert-stub>
          </div>
        </div>
        <hr
          aria-orientation="horizontal"
          class="my-2 v-divider theme--light"
          role="separator"
        />
        <div
          class="layout"
        >
          <c-compiled-template-stub
            template="footer"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`base-login Renders \`base-login\` with default state 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__title primary white--text"
  >
    <div
      class="layout justify-space-between align-center"
    >
      <h3>
        Login
      </h3>
      <img
        alt=""
        class="secondaryLogo"
        src="@/assets/canopsis.png"
      />
    </div>
  </div>
  <div
    class="v-card__text"
  >
    <form
      class="v-form pa-2"
      novalidate="novalidate"
    >
      <!---->
      <login-form-stub
        form="[object Object]"
      />
      <div
        class="flex"
      >
        <div
          class="layout mb-1 justify-space-between align-center"
        >
          <button
            class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
            type="submit"
          >
            <span
              class="v-btn__content"
            >
            Connect
            </span>
          </button>
          <div
            class="flex xs9"
          >
            <c-alert-stub
              class="py-1 my-0 font-weight-bold"
              type="error"
            >
            </c-alert-stub>
          </div>
        </div>
        <!---->
      </div>
    </form>
  </div>
</div>
`;

exports[`base-login Renders \`base-login\` with error 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__title primary white--text"
  >
    <div
      class="layout justify-space-between align-center"
    >
      <h3>
        Login
      </h3>
      <img
        alt=""
        class="secondaryLogo"
        src="@/assets/canopsis.png"
      />
    </div>
  </div>
  <div
    class="v-card__text"
  >
    <form
      class="v-form pa-2"
      novalidate="novalidate"
    >
      <!---->
      <login-form-stub
        form="[object Object]"
      />
      <div
        class="flex"
      >
        <div
          class="layout mb-1 justify-space-between align-center"
        >
          <button
            class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
            type="submit"
          >
            <span
              class="v-btn__content"
            >
            Connect
            </span>
          </button>
          <div
            class="flex xs9"
          >
            <c-alert-stub
              class="py-1 my-0 font-weight-bold"
              type="error"
              value="true"
            >
              Server error message
            </c-alert-stub>
          </div>
        </div>
        <!---->
      </div>
    </form>
  </div>
</div>
`;
